--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
     font-weight: bolder;
 }
 
-ul {
+.header-links {
     display: flex;
     list-style-type: none;
     padding: 0px;
@@ -77,4 +77,43 @@ button {
     color: white;
     font-size: 20px;
     font-weight: bold;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    padding: 40px;
+}
+
+.info-header {
+    font-size: 48px;
+    font-weight: bold;
+    color: #1f2937;
+}
+
+.info-sections {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 100px;
+}
+
+.info-img {
+    width: 200px;
+    height: 200px;
+    background-color: white;
+    border: 4px solid #3882f6;
+    border-radius: 25px;
+}
+
+.info-txt {
+    width: 200px;
+    text-align: center;
+}
+
+.card {
+    display:flex;
+    flex-direction: column;
+    gap: 12px;
 }
