--- a/styles.css
+++ b/styles.css
@@ -70,19 +70,22 @@ body {
 }
 
 button {
-    border-color: #3882f6;
+
+    border: 2px solid #3882f6;
     background-color: #3882f6;
     border-radius: 12px;
-    padding: 10px 30px;
+    padding: 8px 40px;
     color: white;
     font-size: 20px;
     font-weight: bold;
 }
 
 .info {
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 450px;
     gap: 40px;
     padding: 40px;
 }
@@ -94,6 +97,8 @@ button {
 }
 
 .info-sections {
+    margin: 0px;
+    padding: 0px;
     display: flex;
     flex-wrap: wrap;
     gap: 100px;
@@ -110,10 +115,84 @@ button {
 .info-txt {
     width: 200px;
     text-align: center;
+    font-size: 20px;
 }
 
 .card {
     display:flex;
     flex-direction: column;
     gap: 12px;
+}
+
+.quote {
+    flex: auto;
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 450px;
+}
+
+.quote-text {
+    font-size: 48px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1f2937;
+    width: 60%;
+}
+
+.quote-person {
+    margin-left: auto;
+    margin-right: 400px;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.call {
+    flex: auto;
+    display: flex;
+    height: 400px;
+    justify-content: center;
+    align-items: center;
+}
+
+.box {
+    background-color: #3882f6;
+    display: flex;
+    height: 50%;
+    width: 75%;
+    border-radius: 25px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 200px;
+}
+
+.call-button {
+    border: 2px solid white;
+}
+
+.box-head {
+    color: white;
+    font-weight: bold;
+    font-size: 36px;
+}
+
+.box-txt {
+    color: white;
+    font-weight: lighter;
+    font-size: 20px;
+}
+
+.footer {
+    background-color: #1F2937;
+    display: flex;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
+}
+
+.copyright {
+    color: white;
+    font-size: 20px;
 }
