--- a/styles.css
+++ b/styles.css
@@ -60,13 +60,10 @@ body {
     flex: 1;
 }
 
-.img-place {
-    background-color:#8f9296;
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-    color: white;
+
+.twice {
+    height: 500px;
+    width: auto;
 }
 
 button {
@@ -104,12 +101,18 @@ button {
     gap: 100px;
 }
 
+.kpop {
+    width:200px;
+    height:auto;
+}
+
 .info-img {
     width: 200px;
     height: 200px;
     background-color: white;
     border: 4px solid #3882f6;
     border-radius: 25px;
+    overflow: hidden;
 }
 
 .info-txt {
@@ -187,9 +190,9 @@ button {
 .footer {
     background-color: #1F2937;
     display: flex;
-    height: 100px;
     justify-content: center;
     align-items: center;
+    height: 100px;
 }
 
 .copyright {
